# WildBridge

./: .gitignore  README.md  debug_discovery.py  rebuild_android_app.sh  rth_analysis_20251130_150453.csv  rth_analysis_20251130_151234.csv  rth_analysis_20251130_154144.csv  rth_analysis_20251130_154144.txt  rth_analysis_20251130_154721.csv  rth_analysis_20251130_154721.txt  test_direct_udp.py  test_discovery.sh  test_udp_server.py
GroundStation/: Dockerfile  entrypoint.sh  run_docker.sh  run_webrtc.sh  test_integration.py
GroundStation/Python/: djiInterface.py  mavlink_proxy.py  requirements.txt  rth_analysis.py  rth_animation.py  rth_predictor.py
GroundStation/ROS/wildbridge_mavros/: README.md  package.xml  setup.cfg  setup.py
GroundStation/ROS/wildbridge_mavros/config/: drones.yaml
GroundStation/ROS/wildbridge_mavros/launch/: auto_discovery.launch.py  mavros_bridge.launch.py  multi_drone.launch.py
GroundStation/ROS/wildbridge_mavros/scripts/: auto_discover_launch.sh
GroundStation/ROS/wildbridge_mavros/wildbridge_mavros/: __init__.py  auto_launch.py  auto_mavros_bridge.py  dji_interface.py  mavros_bridge.py
GroundStation/webrtc_client/: README.md  debug_metadata.py  requirements.txt  webrtc_drone_viewer.py
WildBridgeApp/: BUILD_FIXES_SUMMARY.md  QUICK_FIX_REFERENCE.md
WildBridgeApp/android-sdk-v5-as/: CRASH_DEBUGGING_GUIDE.md  build.gradle  capture_crash_log.sh  dependencies.gradle  gradle.properties
WildBridgeApp/android-sdk-v5-sample/: build.gradle
WildBridgeApp/android-sdk-v5-uxsdk/: build.gradle
(+37 files in other folders)
